-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
Fully Compatible
-
ALL
-
30
-
None
-
None
-
None
-
None
-
None
-
None
-
None
The fuzzer found this problem via the FTDC background thread which appears to run a couple back-to-back aggregation commands using the same OperationContext. What seems to be happening is the following:
- FTDC thread begins, and issues one aggregation which successfully records query stats.
- Another thread disables query stats by setting the cache size to 0.
- (back in FTDC) With the same OperationContext, but a different collector, we run a second aggregate.
- This second aggregate shares the old OperationContext (and CurOp, and OpDebug) which still has a query stats key hash on it, but will never have a query stats key, because query stats has been disabled.
This doesn't cause too much trouble, it just causes us to miss that one recording for FTDC. The thread can continue without crashing or anything.
- related to
-
SERVER-85405 Factor out code to set up and tear down setParameters in fsm_workloads
-
- In Code Review
-