SERVER-84730 Update query stats assertions (#18043)

GitOrigin-RevId: 0766fb001ac394aec4410d27276d1721fb72ff8a