jstests/concurrency/fsm_workloads/query_stats_concurrent.js
@@ -8,7 +8,10 @@
  *  does_not_support_causal_consistency,
  * ]
  *
+ *
  */
+import {setParameterOnAllNodes} from "jstests/concurrency/fsm_workload_helpers/set_parameter.js";
+
 export const $config = (function() {
     var states = (function() {
         function init(db, collName) {
@@ -89,19 +92,10 @@ export const $config = (function() {
     var internalQueryStatsCacheSize;
 
     let setup = function(db, collName, cluster) {
-        const setQueryStatsParams = (db) => {
-            var res;
-            res = db.adminCommand({setParameter: 1, internalQueryStatsRateLimit: -1});
-            assert.commandWorked(res);
-            internalQueryStatsRateLimit = res.was;
-
-            res = db.adminCommand({setParameter: 1, internalQueryStatsCacheSize: "1MB"});
-            assert.commandWorked(res);
-            internalQueryStatsCacheSize = res.was;
-        };
-
-        cluster.executeOnMongodNodes(setQueryStatsParams);
-        cluster.executeOnMongosNodes(setQueryStatsParams);
+        internalQueryStatsRateLimit = setParameterOnAllNodes(
+            {cluster: cluster, paramName: "internalQueryStatsRateLimit", newValue: -1});
+        internalQueryStatsCacheSize = setParameterOnAllNodes(
+            {cluster: cluster, paramName: "internalQueryStatsCacheSize", newValue: "1MB"});
 
         assert.commandWorked(db[collName].createIndex({i: 1}));
         const bulk = db[collName].initializeUnorderedBulkOp();
@@ -112,14 +106,16 @@ export const $config = (function() {
     };
 
     let teardown = function(db, collName, cluster) {
-        const resetQueryStatsParams = (db) => assert.commandWorked(db.adminCommand({
-            setParameter: 1,
-            internalQueryStatsRateLimit: internalQueryStatsRateLimit,
-            internalQueryStatsCacheSize: internalQueryStatsCacheSize
-        }));
-
-        cluster.executeOnMongodNodes(resetQueryStatsParams);
-        cluster.executeOnMongosNodes(resetQueryStatsParams);
+        setParameterOnAllNodes({
+            cluster: cluster,
+            paramName: "internalQueryStatsRateLimit",
+            newValue: internalQueryStatsRateLimit
+        });
+        setParameterOnAllNodes({
+            cluster: cluster,
+            paramName: "internalQueryStatsCacheSize",
+            newValue: internalQueryStatsCacheSize
+        });
 
         db[collName].drop();
     };
