src/mongo/db/query/query_stats/query_stats_test.cpp
@@ -43,8 +43,7 @@
 #include "mongo/unittest/framework.h"
 #include "mongo/util/assert_util.h"
 
-
-#define ASSERT_NULL(EXPR) ASSERT_FALSE(EXPR)
+#define MONGO_LOGV2_DEFAULT_COMPONENT ::mongo::logv2::LogComponent::kQueryStats
 
 namespace mongo::query_stats {
 class QueryStatsTest : public ServiceContextTest {};
@@ -68,7 +67,7 @@ TEST_F(QueryStatsTest, TwoRegisterRequestsWithSameOpCtxRateLimitedFirstCall) {
     ASSERT_EQ(opDebug.queryStatsInfo.wasRateLimited, false);
 
     // First call to registerRequest() should be rate limited.
-    queryStatsRateLimiter(opCtx->getServiceContext()) =
+    QueryStatsStoreManager::getRateLimiter(opCtx->getServiceContext()) =
         std::make_unique<RateLimiting>(0, Seconds{1});
     ASSERT_DOES_NOT_THROW(query_stats::registerRequest(opCtx.get(), nss, [&]() {
         return std::make_unique<query_stats::FindKey>(
@@ -76,11 +75,13 @@ TEST_F(QueryStatsTest, TwoRegisterRequestsWithSameOpCtxRateLimitedFirstCall) {
     }));
 
     // Since the query was rate limited, no key should have been created.
-    ASSERT_NULL(opDebug.queryStatsInfo.key);
+    ASSERT(opDebug.queryStatsInfo.key == nullptr);
     ASSERT_EQ(opDebug.queryStatsInfo.wasRateLimited, true);
 
     // Second call should not be rate limited.
-    queryStatsRateLimiter(opCtx->getServiceContext()).get()->setSamplingRate(INT_MAX);
+    QueryStatsStoreManager::getRateLimiter(opCtx->getServiceContext())
+        .get()
+        ->setSamplingRate(INT_MAX);
 
     ASSERT_DOES_NOT_THROW(query_stats::registerRequest(opCtx.get(), nss, [&]() {
         return std::make_unique<query_stats::FindKey>(
@@ -88,7 +89,85 @@ TEST_F(QueryStatsTest, TwoRegisterRequestsWithSameOpCtxRateLimitedFirstCall) {
     }));
 
     // queryStatsKey should not be created for previously rate limited query.
-    ASSERT_NULL(opDebug.queryStatsInfo.key);
+    ASSERT(opDebug.queryStatsInfo.key == nullptr);
     ASSERT_EQ(opDebug.queryStatsInfo.wasRateLimited, true);
+    ASSERT_FALSE(opDebug.queryStatsInfo.keyHash.has_value());
+}
+
+TEST_F(QueryStatsTest, TwoRegisterRequestsWithSameOpCtxDisabledBetween) {
+    // This test simulates an observed bug where an opCtx is used for two requests, and between the
+    // first and the second the query stats store is emptied/disabled.
+
+    // Make query for query stats.
+    const NamespaceString nss = NamespaceString::createNamespaceString_forTest("testDB.testColl");
+    FindCommandRequest fcr((NamespaceStringOrUUID(nss)));
+    fcr.setFilter(BSONObj());
+
+    auto serviceCtx = getServiceContext();
+    auto opCtx = makeOperationContext();
+
+    auto& opDebug = CurOp::get(*opCtx)->debug();
+    ASSERT(opDebug.queryStatsInfo.key == nullptr);
+    ASSERT_FALSE(opDebug.queryStatsInfo.keyHash.has_value());
+    QueryStatsStoreManager::get(serviceCtx) =
+        std::make_unique<QueryStatsStoreManager>(16 * 1024 * 1024, 1);
+
+    QueryStatsStoreManager::getRateLimiter(serviceCtx) =
+        std::make_unique<RateLimiting>(-1, Seconds{1});
+
+    {
+        auto fcrCopy = std::make_unique<FindCommandRequest>(fcr);
+        auto expCtx = makeExpressionContext(opCtx.get(), *fcrCopy);
+        auto parsedFind = uassertStatusOK(parsed_find_command::parse(expCtx, {std::move(fcrCopy)}));
+        ASSERT_DOES_NOT_THROW(query_stats::registerRequest(opCtx.get(), nss, [&]() {
+            return std::make_unique<query_stats::FindKey>(
+                expCtx, *parsedFind, query_shape::CollectionType::kCollection);
+        }));
+
+        ASSERT(opDebug.queryStatsInfo.key != nullptr);
+        ASSERT(opDebug.queryStatsInfo.keyHash.has_value());
+
+        ASSERT_DOES_NOT_THROW(query_stats::writeQueryStats(opCtx.get(),
+                                                           opDebug.queryStatsInfo.keyHash,
+                                                           std::move(opDebug.queryStatsInfo.key),
+                                                           QueryStatsSnapshot{}));
+    }
+
+    // Second call should see that query stats are now disabled.
+    {
+        // To reproduce SERVER-84730 we need to clear out the query stats store so that writing the
+        // stats at the end will attempt to insert a new entry.
+        QueryStatsStoreManager::get(serviceCtx)->resetSize(0);
+
+        auto fcrCopy = std::make_unique<FindCommandRequest>(fcr);
+        fcrCopy->setFilter(BSON("x" << 1));
+        fcrCopy->setSort(BSON("x" << 1));
+        auto expCtx = makeExpressionContext(opCtx.get(), *fcrCopy);
+        auto parsedFind = uassertStatusOK(parsed_find_command::parse(expCtx, {std::move(fcrCopy)}));
+
+        ASSERT_DOES_NOT_THROW(query_stats::registerRequest(opCtx.get(), nss, [&]() {
+            return std::make_unique<query_stats::FindKey>(
+                expCtx, *parsedFind, query_shape::CollectionType::kCollection);
+        }));
+
+        // queryStatsKey should not be created since we have a size budget of 0.
+        ASSERT(opDebug.queryStatsInfo.key == nullptr);
+        // This is not a rate limit, but rather a lack of space rendering it entirely disabled.
+        ASSERT_FALSE(opDebug.queryStatsInfo.wasRateLimited);
+
+        // Interestingly, we purposefully leave the hash value around on the OperationContext after
+        // the previous operation finishes. This is because we think it may have value in being
+        // logged in the future, even after query stats have been written. Excepting obscure
+        // internal use-cases, most OperationContexts will die shortly after the query stats are
+        // written, so this isn't expected to be a large issue.
+        ASSERT(opDebug.queryStatsInfo.keyHash.has_value());
+
+        QueryStatsStoreManager::get(serviceCtx)->resetSize(16 * 1024 * 1024);
+        // SERVER-84730 this assertion used to throw since there is no key, but there is a hash.
+        ASSERT_DOES_NOT_THROW(query_stats::writeQueryStats(opCtx.get(),
+                                                           opDebug.queryStatsInfo.keyHash,
+                                                           std::move(opDebug.queryStatsInfo.key),
+                                                           QueryStatsSnapshot{}));
+    }
 }
 }  // namespace mongo::query_stats
